--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
+<% if user_signed_in? %>
+  <p>Logged in as <%= current_user.email %></p>
+  <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+<% end %>
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
