enable admin to CRUD users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   <body>
     <p><%= notice %></p>
     <p><%= alert %></p>
+
+    <% if user_signed_in? %>
+      <p>Logged in as <%= current_user.email %></p>
+      <p>User type: <%= current_user.user_type.humanize %></p>
+      <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
