--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
-<% if user_signed_in? %>
-  <p>Logged in as <%= current_user.email %></p>
-  <p>User type: <%= current_user.user_type.humanize %></p>
-  <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+<% if current_user.user_type == "admin" %>
+  <p>
+    <%= link_to "New User", new_user_path %>
+  </p>
+  <p>
+    <%= link_to "All users", users_path %>
+  </p>
 <% end %>
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
