--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
       <%= button_to "Log out", destroy_user_session_path, method: :delete %>
     <% end %>
 
+    <% if action_name != "home" %>
+      <%= link_to "Home", root_path %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
